--- a/index.html
+++ b/index.html
@@ -1329,6 +1329,253 @@
           </div>
         </aside>
 
+        <!-- Highest Top-Up Page -->
+        <main class="p-4 md:ml-64 h-auto pt-20">
+          <div
+            class="flex flex-col bg-gray-50 dark:bg-dark100 rounded-lg min-h-screen"
+          >
+            <h1
+              class="text-xl lg:text-3xl font-medium text-primary tracking-tight mb-10"
+            >
+              Highest
+            </h1>
+            <div class="p-2 bg-white dark:bg-dark200 rounded-lg mb-4">
+              <div
+                class="border border-gray-300 dark:border-gray-500 text-gray-900 dark:text-white text-sm rounded-lg block w-fit p-2.5 self-end"
+              >
+                2023-04-018 - 2024-04-18
+              </div>
+            </div>
+            <div class="flex flex-col">
+              <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                <div
+                  class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 flex items-center gap-2 lg:gap-6 max-h-60"
+                >
+                  <div class="basis-1/3 flex justify-between">
+                    <div class="flex flex-col gap-3">
+                      <p
+                        class="text-sm font-medium text-gray-900 dark:text-white"
+                      >
+                        Active Users
+                      </p>
+                      <h5
+                        class="leading-none text-3xl font-semibold text-gray-900 dark:text-white pb-2"
+                      >
+                        30
+                      </h5>
+                      <div
+                        class="flex items-center text-base font-semibold text-green-500 dark:text-green-500 text-center"
+                      >
+                        10%
+                        <svg
+                          class="w-3 h-3 ms-1"
+                          aria-hidden="true"
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="none"
+                          viewBox="0 0 10 14"
+                        >
+                          <path
+                            stroke="currentColor"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M5 13V1m0 0L1 5m4-4 4 4"
+                          />
+                        </svg>
+                      </div>
+                    </div>
+                  </div>
+                  <div
+                    class="basis-1/7 w-full"
+                    id="area-chart-activeUsersSpin"
+                  ></div>
+                </div>
+
+                <div
+                  class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 max-h-60"
+                >
+                  <h3
+                    class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2"
+                  >
+                    Total Betting Amount
+                  </h3>
+                  <div id="line-chart-spin"></div>
+                </div>
+
+                <div
+                  class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 max-h-60"
+                >
+                  <h3
+                    class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2"
+                  >
+                    Total Winning
+                  </h3>
+                  <!-- Donut Chart -->
+                  <div class="py-6" id="donut-chartSpin"></div>
+                </div>
+              </div>
+              <div class="relative overflow-x-auto shadow rounded-lg mt-4">
+                <table
+                  class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
+                >
+                  <thead
+                    class="text-xs text-gray-700 uppercase bg-gray-200 dark:bg-dark300 dark:text-gray-400 p-2"
+                  >
+                    <tr>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        User ID
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        Game ID
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        Bet Amount
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        Winnings
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        Date and Time
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">Remark</th>
+                    </tr>
+                  </thead>
+                  <tbody id="tbodySpin"></tbody>
+                </table>
+              </div>
+              <div
+                class="flex items-center flex-wrap justify-between mt-6 lg:mt-10"
+              >
+                <!-- Previous Button -->
+                <div class="flex">
+                  <a
+                    href="#"
+                    class="flex items-center justify-center px-3 h-8 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-dark200 dark:border-dark100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+                  >
+                    Previous
+                  </a>
+
+                  <!-- Next Button -->
+                  <a
+                    href="#"
+                    class="flex items-center justify-center px-3 h-8 ms-3 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-dark200 dark:border-dark100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+                  >
+                    Next
+                  </a>
+                </div>
+
+                <span class="text-sm text-gray-700 dark:text-gray-400">
+                  Page
+                  <span class="font-semibold text-gray-900 dark:text-white"
+                    >1</span
+                  >
+                  of
+                  <span class="font-semibold text-gray-900 dark:text-white"
+                    >10</span
+                  >
+                </span>
+              </div>
+            </div>
+          </div>
+        </main>
+
+        <!-- Settings page -->
+        <main class="p-4 md:ml-64 h-auto pt-20">
+          <div
+            class="flex flex-col bg-gray-50 dark:bg-dark100 rounded-lg min-h-screen"
+          >
+            <h1
+              class="text-xl lg:text-3xl font-medium text-primary tracking-tight mb-10"
+            >
+              Settings
+            </h1>
+
+            <div
+              class="w-full shadow bg-white dark:bg-dark200 py-8 rounded-lg h-full"
+            >
+              <div class="flex flex-col gap-4 max-w-lg mmx-auto px-4">
+                <form class="">
+                  <label
+                    for="countries"
+                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                    >Display</label
+                  >
+                  <select
+                    id="countries"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  >
+                    <option>Select Mode</option>
+                    <option value="US">Dark Mode</option>
+                    <option value="CA">Light Mode</option>
+                  </select>
+                </form>
+
+                <a href="" class="hover:bg-gray-100 rounded-lg p-2">
+                  <label
+                    for="countries"
+                    class="block mb-2 text-sm font-medium text-gray-500 dark:text-gray-100"
+                    >API Settings</label
+                  >
+                  <div class="flex items-center justify-between">
+                    <span
+                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      >API integration
+                    </span>
+                    <svg
+                      class="w-4 h-4 text-gray-500 dark:text-white"
+                      aria-hidden="true"
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                    >
+                      <path
+                        stroke="currentColor"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="m9 5 7 7-7 7"
+                      />
+                    </svg>
+                  </div>
+                </a>
+
+                <a href="" class="hover:bg-gray-100 rounded-lg p-2">
+                  <label
+                    for="countries"
+                    class="block mb-2 text-sm font-medium text-gray-500 dark:text-gray-100"
+                    >Security
+                  </label>
+                  <div class="flex items-center justify-between">
+                    <span
+                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      >Security</span
+                    >
+                    <svg
+                      class="w-4 h-4 text-gray-500 dark:text-white"
+                      aria-hidden="true"
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                    >
+                      <path
+                        stroke="currentColor"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="m9 5 7 7-7 7"
+                      />
+                    </svg>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </main>
+
         <!-- Check Page -->
         <main class="p-4 md:ml-64 min-h-screen pt-20">
           <div
